--- a/abc_comprehensivecba_gmm.tex
+++ b/abc_comprehensivecba_gmm.tex
@@ -101,19 +101,19 @@ q : =
 
 \noindent where $\bar{u}$ denotes the empirical counterpart of $u$.\\
 
-\noindent \textbf{[JJH: stack across all ages.] [JLG: This is coming after.}\\
+\noindent \textbf{[JJH: stack across all ages.] [JLG: This is coming after.]}\\
 
 
 \noindent \textbf{[JJH: we are trying to predict in $n$ sample] [JJH: How do we initialize the $n$? We are using $n$ to predict.] [JLG: Correct. See 1. below. There, I state how do we initialize in the auxiliary sample. The auxiliary sample always contains the outcomes observed at $a^*$. The footnote states what happens when we do not.]}\\
 
-\noindent \textbf{[JJH: let's cut the chase ---you never say how you forecast $n$. The answer to the previous question should get to this.]}\\
+\noindent \textbf{[JJH: let's cut the chase ---you never say how you forecast $n$.] [JLG: The answer to the previous question should get to this.]}\\
 
 \noindent \textbf{[JJH: How do we join the $e$ sample with the $n$ sample.] [JLG: The two samples meet in the joint moment condition in \eqref{eq:MOMENT}. A few steps come before.]}\\
 
 \noindent Two important questions are:
 
 \begin{enumerate}
-\item The moment in \eqref{eq:smoment} are satisfied in the auxiliary sample, \textbf{how do we \textit{initialize} the computation of their empirical counterparts in the auxiliary sample?} \\ 
+\item The moment in \eqref{eq:smoment} is satisfied in the auxiliary sample, \textbf{how do we \textit{initialize} the computation of their empirical counterparts in the auxiliary sample?} \\ 
 \noindent In the auxiliary sample, there are two cases.\\
 
 \begin{enumerate}
@@ -123,7 +123,7 @@ q : =
 
 \item We do not observe $Y_{n,j,a}$ at $a = a^*$. This happens for some health outcomes. At $a^*$, we do not observe health outcomes as cancer or heart disease. We observe biomarkers.  We use these biomarkers to predict the health outcomes at $a^*$. Once a prediction is available, we can take a step analogous to step $2.$ below to compute the empirical counterpart of $\bm{\bar{m}}_{j,a} \left( \bm{X}_{n,a}^d, \bm{B}_{n} \right)$. We form a prediction of the health outcome at $a^*$ and then we go forward as in (a), replacing the observed outcome at $a = a^*$ with the prediction.\\
 
-\noindent The prediction of the health outcomes at age $a^*$, is based on probabilistic models that are identified through standard moment conditions (see Appendix~\ref{appendix:health}). For further reference, we define this additional set of moments as: 
+\noindent The prediction of the health outcomes at age $a^*$, is based on probabilistic models that are identified through standard moment conditions (see Appendix F). For further reference, we define this additional set of moments as: 
 
 \begin{equation}
 \mathbb{E} \left[ \mathbf{h} \left(  \bm{X}_{n,a^*}^d, \bm{B}_{n}; \bm{\theta}_{h}  \right) \right] = \mathbf{0}.
@@ -156,17 +156,17 @@ q : =
 \begin{eqnarray}
 \mathbb{E} \left[ \bm{m} \left( \cdot ; \bm{\theta} \right) \right] &:=&
 \begin{bmatrix}
- \mathbf{h} \left(  \bm{X}_{n,a^*}^d, \bm{B}_{n}; \bm{\theta}_{h}  \right) \\  \mathbf{h} \left(  \bm{X}_{e,a^*}^d, \bm{B}_{e}; \bm{\theta}_{h}  \right) \\
-\bm{m}_{e,j',a^*+1} \left( \bm{X}_{e,a^*+1}^d, \bm{B}_{e}; \bm{\theta}_{j',a^*+1} \right) \\ \vdots \\  \bm{m}_{e,j',A} \left( \bm{X}_{e,A}^d, \bm{B}_{e}; \bm{\theta}_{j',A} \right) \\
-\bm{m}_{n,j',a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j',a^*+1} \right) \\ \vdots \\  \bm{m}_{n,j',A} \left( \bm{X}_{n,A}^d, \bm{B}_{e}; \bm{\theta}_{j',A} \right) \\
-\bm{m}_{e,j'',a^*+1} \left( \bm{X}_{e,a^*+1}^d, \bm{B}_{e}; \bm{\theta}_{j'',a^*+1} \right) \\ \vdots \\  \bm{m}_{e,j'',A} \left( \bm{X}_{e,A}^d, \bm{B}_{e}; \bm{\theta}_{j'',A} \right) \\
-\bm{m}_{n,j'',a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{j'',a^*+1} \right) \\ \vdots \\  \bm{m}_{n,j'',A} \left( \bm{X}_{n,A}^d, \bm{B}_{e}; \bm{\theta}_{j'',A} \right) 
+ \mathbf{h}_{e} \left(  \bm{X}_{e,a^*}^d, \bm{B}_{e}; \bm{\theta}_{h}  \right) \\  \mathbf{h}_{n} \left(  \bm{X}_{n,a^*}^d, \bm{B}_{n}; \bm{\theta}_{h}  \right) \\
+\bm{m}_{e,1,a^*+1} \left( \bm{X}_{e,a^*+1}^d, \bm{B}_{e}; \bm{\theta}_{1,a^*+1} \right) \\ \vdots \\  \bm{m}_{e,1,A} \left( \bm{X}_{e,A}^d, \bm{B}_{e}; \bm{\theta}_{1,A} \right) \\
+\bm{m}_{n,1,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{1,a^*+1} \right) \\ \vdots \\  \bm{m}_{n,1,A} \left( \bm{X}_{n,A}^d, \bm{B}_{e}; \bm{\theta}_{1,A} \right) \\
+\bm{m}_{e,J,a^*+1} \left( \bm{X}_{e,a^*+1}^d, \bm{B}_{e}; \bm{\theta}_{J,a^*+1} \right) \\ \vdots \\  \bm{m}_{e,J,A} \left( \bm{X}_{e,A}^d, \bm{B}_{e}; \bm{\theta}_{J,A} \right) \\
+\bm{m}_{n,J,a^*+1} \left( \bm{X}_{n,a^*+1}^d, \bm{B}_{n}; \bm{\theta}_{J,a^*+1} \right) \\ \vdots \\  \bm{m}_{n,J,A} \left( \bm{X}_{n,A}^d, \bm{B}_{e}; \bm{\theta}_{J,A} \right) 
  \label{eq:loss}
 \end{bmatrix}  \\ \nonumber
 &=& \bm{0}, \label{eq:MOMENT}
 \end{eqnarray}
 
-\noindent where we use the subindex used so far to distinguish the moments in the auxiliary sample with the moments in the experimental sample. In our analysis, $\bm{X}_{k,a^*+1}^d$ contains a lagged and possibly unobserved values of $Y_{k,j,a^*+1}$. To compute the empirical counterparts of $\bm{m}_{k,j,a^*+1}$ for $k \in \{e, n\}$, we use the steps listed as 1. and 2. above.\\
+\noindent where we use the subindex used so far to distinguish the moments in the auxiliary sample with the moments in the experimental sample and $J$ is the total number of outcomes that we consider. In our analysis, $\bm{X}_{k,a^*+1}^d$ contains a lagged and possibly unobserved values of $Y_{k,j,a^*+1}$. To compute the empirical counterparts of $\bm{m}_{k,j,a^*+1}$ for $k \in \{e, n\}$, we use the steps listed as 1. and 2. above.\\
 
 \noindent Let $\bm{W}$ be a positive definite matrix. A consistent estimation approach for $\bm{\theta}$ is to minimize 
 
@@ -174,7 +174,7 @@ q : =
 Q :=  {\bm{\bar{m}} \left( \cdot ; \bm{\theta} \right) }^{'} \bm{W} ^{-1} {\bm{\bar{m}} \left( \cdot ; \bm{\theta} \right)}. \label{eq:wloss}
 \end{equation}
 
-\noindent We use the CNLSY to construct the moments from ages 22 to 29 and then use the PSID and the NLSY79 as a single, joint sample to construct the moments afterwards (except for health, where we use various other datasets, as we explain in Appendix~\ref{appendix:health}).\\
+\noindent We use the CNLSY to construct the moments from ages 22 to 29 and then use the PSID and the NLSY79 as a single, joint sample to construct the moments afterwards (except for health, where we use various other datasets, as we explain in Appendix~F).\\
 
 \noindent The loss function in \eqref{eq:wloss} weighs the moments coming from different datasets. $\bm{W}$ is not restricted to be diagonal so that these moments are allowed to correlate. Iterated, feasible procedures to obtain an estimate of $\bm{W}$ jointly with the parameters of interest guarantee efficiency and are straightforward to implement \citep{Hansen_1982_Econometrica,Amemiya_1985_advanced}.\footnote{\citet{Altonji_Segal_1996_JoBaES} show that GMM presents downwards bias in absolute value in small-sample size setting, which could be a concern in our setting.} 
 
